--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
 <html>
-	<h1> Hello </h1>
+	<head> 
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	</head>
+	<body>
+		<div class="container"> 
+			<h2>Instructions: </h2>
+			<ol> 
+				<li> Use curl to download code from https://github.com/djseong/surprise_script </li>
+				<li> Run script.py </li>
+			</ol>
+			<h3> Instructions for the technologically illiterate </h3>
+			<ol> 
+				<li> Open terminal </li>
+				<li> Run this command: curl -LJo surprise.zip https://github.com/djseong/surprise_script/zipball/master </li>
+				<li> Run this command: unzip surprise.zip -d surprise1 </li>
+				<li> Run this command: cd surprise1 </li>
+				<li> If the previous command gave you something like cd: surprise1 No such file or directory, you goofed. Message dan </li>
+				<li> Else, run this command: ls </li>
+				<li> You should see one output, something like djseong-surprise_script-77cabc5 (the numbers and letters at the end may be different) </li>
+				<li> Type cd and the output you see, so like: cd djseong-surprise_script-77cabc5
+				<li> Run this command: python script.py </li>
+			</ol>
+		</div>
+	</body>
 </html>
