--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 				<li> Run this command: cd surprise1 </li>
 				<li> If the previous command gave you something like cd: surprise1 No such file or directory, you goofed. Message dan </li>
 				<li> Else, run this command: ls </li>
-				<li> You should see one output, something like djseong-surprise_script-77cabc5 (the numbers and letters at the end may be different) </li>
-				<li> Type cd and the output you see, so like: cd djseong-surprise_script-77cabc5
+				<li> You should see one output, something like djseong-surprise_script-9aeedef (the numbers and letters at the end may be different) </li>
+				<li> Type cd and the output you see, so like: cd djseong-surprise_script-9aeedef
 				<li> Run this command: python script.py </li>
+				<li> <i> If you exit the terminal and need to run the script again, start from step 4 again </i> </li>
 			</ol>
 		</div>
 	</body>
