--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			</ol>
 			<h3> Instructions for the technologically illiterate </h3>
 			<ol> 
+				<p> <i> Pre-reqs: MAC LAPTOP, INTERNET ACCESS, A PATIENT FRIEND </i> </p>
 				<li> Open terminal </li>
 				<li> Run this command: curl -LJo surprise.zip https://github.com/djseong/surprise_script/zipball/master </li>
 				<li> Run this command: unzip surprise.zip -d surprise1 </li>
