--- a/index.html
+++ b/index.html
@@ -2,27 +2,16 @@
 	<head> 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css"> 
+		<script type="text/javascript" src="helper.js"></script>
 	</head>
-	<body>
-		<div class="container"> 
-			<h2>Instructions: </h2>
-			<ol> 
-				<li> Use curl to download code from https://github.com/djseong/surprise_script </li>
-				<li> Run script.py </li>
-			</ol>
-			<h3> Instructions for the technologically illiterate </h3>
-			<ol> 
-				<li> Open terminal </li>
-				<li> Run this command: curl -LJo surprise.zip https://github.com/djseong/surprise_script/zipball/master </li>
-				<li> Run this command: unzip surprise.zip -d surprise1 </li>
-				<li> Run this command: cd surprise1 </li>
-				<li> If the previous command gave you something like cd: surprise1 No such file or directory, you goofed. Message dan </li>
-				<li> Else, run this command: ls </li>
-				<li> You should see one output, something like djseong-surprise_script-9aeedef (the numbers and letters at the end may be different) </li>
-				<li> Type cd and the output you see, so like: cd djseong-surprise_script-9aeedef
-				<li> Run this command: python script.py </li>
-				<li> <i> If you exit the terminal and need to run the script again, start from step 4 again </i> </li>
-			</ol>
+	<body onload="calcTime()">
+		<div class="parent"> 
+			<div class = "child"> 
+				<h1 id="counter"> </h1>
+				<button type="button" id="present" class="btn btn-secondary btn-lg" 
+				onClick="showPresent()" disabled >See present</button>
+			</div>
 		</div>
 	</body>
 </html>
