--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class = "child"> 
 				<h1 id="counter"> </h1>
 				<button type="button" id="present" class="btn btn-secondary btn-lg" 
-				onClick="showPresent()" disabled >See present</button>
+				onClick="showPresent()"  >See present</button>
 			</div>
 		</div>
 	</body>
