--- a/spring break_files/index.html
+++ b/spring break_files/index.html
@@ -7,7 +7,7 @@
     <div class="parent"> 
       <div class = "child"> 
         <button type="button" class="btn btn-primary btn-lg" 
-        onClick="document.location.href='letter.htm'" > Letter to Michel <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        onClick="document.location.href='spring break.htm'" > Spring Break Journal <span class="glyphicon glyphicon-chevron-right"> </span> </button>
       </div>
     </div>
   </body>
