--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
   <body>
     <div class="parent"> 
       <div class = "child"> 
+        <h1> Dan and Mitch's history </h1>
         <button type="button" class="btn btn-primary btn-lg" 
-        onClick="document.location.href='spring break.htm'" > Spring Break Journal <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        onClick="document.location.href='birthday/index.html'" > Birthday <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        <button type="button" class="btn btn-primary btn-lg" 
+        onClick="document.location.href='winter/index.html'" > Winter break <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        <button type="button" class="btn btn-primary btn-lg" 
+        onClick="document.location.href='spring break_files/index.html'" > Spring break <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        <button type="button" class="btn btn-primary btn-lg" 
+        onClick="document.location.href='ash_wednesday/index.html'" > Ash Wednesday <span class="glyphicon glyphicon-chevron-right"> </span> </button>
+        <button type="button" class="btn btn-primary btn-lg" 
+        onClick="document.location.href='letter.htm'" > Africa <span class="glyphicon glyphicon-chevron-right"> </span> </button>
       </div>
     </div>
   </body>
