--- a/winter2/card.html
+++ b/winter2/card.html
@@ -52,7 +52,7 @@
 
   <div class="blog-card spring-fever">
   <div class="title-content">
-    <h3><a href="#">Merry Christmas</a></h3>
+    <h3><a href="#">Merry Christmas!</a></h3>
     <div class="intro"> <a href="#">To Mitch</a> </div>
   </div>
   <div class="card-info">
