--- a/bday19/card.html
+++ b/bday19/card.html
@@ -57,18 +57,43 @@
       <div class="click">Click To Open</div>
     </div>
     <div class="card pg2">
-      <div class="content"><img class="birthday" src="http://images.all-free-download.com/images/graphicthumb/best_happy_birthday_design_elements_vector_set_524004.jpg"/></div>
+      <div class="content">
+          <img class="birthday" src="toothless.png">
+          <img class="birthday lower" src="baymax.png">
+          <p class="birthday text">Ba la la la</p>
+      </div>
     </div>
     <div class="card pg3">
       <div class="content">
         <div class="wish">
-          Hi,
-          <br><br><br>
-          Wishing you a very Happy Birthday!!!
-          <br><br>Enjoy.....
-          <br>
-          
-          <br><br>Anupam
+          Hi Mitch,
+          <br><br>
+          Happy Birthday!!!
+          <br><br>
+          When I was making your present for your other two birthdays I would always look 
+          to the past to recall our happy memories and the qualities I admire about you. But for this birthday I feel a little different. 
+          To be sure, we've made many more happy memories since last July and your attractive qualities have only continued to grow on me. 
+          This birthday feels different because I thought more about the future than the past. We're both entering a new period
+          in our lives and that is a pretty big thing for me. I don't know if I've told you this before but I'm actually really bad with transitions.
+          My worst years in school were 6th grade, 9th grade, and freshmen year in college. I'm pretty sure next year is also going to be rough and
+          honestly that scares me because I feel like there isn't that much I can do to prepare for it. I think that's why I've been paying extra
+          attention to things like housing and finances that I can somewhat control. But even though I know all of that and am anticipating that I'm
+          going to struggle next year, I'm still excited to start it with you. I'm not just saying that because I'll have a close friend nearby, although
+          that is also very reassuring. I'm sure we'll have a lot of fun exploring Seattle and living real lives as (almost) neighbors. But I'm mainly
+          saying that I'm excited because I know the biggest way I'm going to grow in my post grad life is spiritually and I can't think of a better person
+          to share that with than you. I remember I told Sam the most important thing he has to cultivate in exec team is a spiritual trust amongst the 
+          members. I realized there are very few people I spiritually trust, and there's even fewer people that I both spiritually trust and also get along
+          naturally very well. The fact that I have that with you makes me excited because it means I'm going to be able to both share and grow in the most important thing
+          with a person I care about. I know I'm still pretty bad at sharing and talking about these things - a lot of this sharing and growing is 
+          still pretty theoretical haha. But I'll work towards it because at least in my head it's a really nice vision. I think it's what God wants
+          for us. 
+          <br><br>
+          So I know that was a lot about me on your birthday, but I was thinking about how to make this card meaningful and I thought that would
+          be writing things that only I would say to only you. So these are the genuine thoughts I've been having for us and the conclusion is that 
+          you're great, I'm very happy to be dating you, and I'm super excited to start post grad with you. 
+        <br><br>
+          Happy birthday! 
+          <br><br>-Dan
         </div>
       </div>
     </div>
